@@ -11,16 +11,20 @@
 # see http://yaml.org
 # ==========================================================
 #
-#
 # if 1, cobbler will allow insertions of system records that duplicate
-# the mac address information of other system records.  In general,
+# the hostname information of other system records.  In general,
 # this is undesirable.
-allow_duplicate_macs: 0
+allow_duplicate_hostnames: 0
 
 # if 1, cobbler will allow insertions of system records that duplicate
 # the ip address information of other system records.  In general,
 # this is undesirable.
 allow_duplicate_ips: 0
+
+# if 1, cobbler will allow insertions of system records that duplicate
+# the mac address information of other system records.  In general,
+# this is undesirable.
+allow_duplicate_macs: 0
 
 # the path to BIND's executable for this distribution.
 bind_bin: /usr/sbin/named
