@@ -24,6 +24,7 @@ Cobbler CHANGELOG
 - (FEAT) settings file and modules.conf now generated by setup.py using templates
 - (FEAT) --template-files makes cobbler more of a full config management system!
 - (FEAT) cobbler reposync now supports --tries=N and --no-fail
+- (FEAT) duplicate hostname prevention, on by default
 
 - Fri Sep 26 2008 - 1.2.5
 - (BUGF) expose --arch for "cobbler image add"
